fix some alignments/column widths

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -3,7 +3,7 @@
 }
 
 .contain-to-grid .top-bar {
-  max-width: 100%;
+  max-width: 75em;
   padding: .7em 1em;
 
   .name h1 {
